--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -379,6 +379,36 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Кнопка отправки положительного отзыва</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Кнопка отправки отрицательного отзыва</string>
     <string name="feedbackIsImportantToUs">Ваш отзыв важен для нас. Отзыв анонимный.</string>
+
+    <!-- Webview Recovery -->
+    <string name="crashedWebViewErrorMessage">Веб-страницу невозможно показать.</string>
+    <string name="crashedWebViewErrorAction">Перезагрузить</string>
+
+    <!-- System Search -->
     <string name="systemSearchOmnibarInputHint"><font size="13">Выполнить поиск или ввести URL-адрес</font></string>
+    <string name="systemSearchDeviceAppLabel">С этого устройства</string>
+    <string name="systemSearchAppNotFound">Приложение не может быть найдено</string>
+    <string name="systemSearchOnboardingText">Спасибо, что выбрали DuckDuckGo!\nТеперь информация о ваших поисковых запросах под надежной защитой.</string>
+    <string name="systemSearchOnboardingFeaturesIntroText">Приложение DuckDuckGo также:</string>
+    <string name="systemSearchOnboardingFeatureOneText">Блокирует небезопасное отслеживание</string>
+    <string name="systemSearchOnboardingFeatureTwoText">Принудительно использует шифрование на веб-сайтах</string>
+    <string name="systemSearchOnboardingFeatureThreeText">Удаляет данные одним касанием</string>
+    <string name="systemSearchOnboardingButtonMore">Показать больше</string>
+    <string name="systemSearchOnboardingButtonLess">Скрыть</string>
+    <string name="systemSearchOnboardingButtonOk">Понятно</string>
+
+    <!-- Dax Dialog -->
+    <string name="daxDialogHideButton">СКРЫТЬ</string>
+    <string name="daxDialogPhew">Уф!</string>
+    <string name="daxDialogYes">OK!</string>
+    <string name="daxDialogAddWidget">Добавить виджет</string>
+    <string name="daxDialogMaybeLater">Может быть позже</string>
+    <string name="daxDialogSettings">Перейти в настройки</string>
+    <string name="daxDialogNext">Далее</string>
+    <string name="daxDialogHighFive">Дай пять!</string>
+    <string name="daxDialogGotIt">Понятно</string>
+    <string name="hideTipsTitle">Скрыть другие подсказки?</string>
+    <string name="hideTipsText">Их немного, и мы постарались сделать их информативными.</string>
+    <string name="hideTipsButton">Скрыть подсказки навсегда</string>
 
 </resources>
