--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -360,6 +360,36 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Tlačítko pozitivní zpětné vazby</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Tlačítko negativní zpětné vazby</string>
     <string name="feedbackIsImportantToUs">Vaše anonymní zpětná vazba je pro nás důležitá.</string>
+
+    <!-- Webview Recovery -->
+    <string name="crashedWebViewErrorMessage">Tuto webovou stránku nelze zobrazit.</string>
+    <string name="crashedWebViewErrorAction">Načíst znovu</string>
+
+    <!-- System Search-->
     <string name="systemSearchOmnibarInputHint"><font size="13">Vyhledat nebo zadat URL</font></string>
+    <string name="systemSearchDeviceAppLabel">Z tohoto zařízení</string>
+    <string name="systemSearchAppNotFound">Aplikace nebyla nalezena</string>
+    <string name="systemSearchOnboardingText">Děkujeme, že jste si vybrali DuckDuckGo!\nPři použití našeho vyhledávání nebo aplikace jsou od teď Vaše vyhledávání chráněna.</string>
+    <string name="systemSearchOnboardingFeaturesIntroText">Aplikace DuckDuckGo také:</string>
+    <string name="systemSearchOnboardingFeatureOneText">Blokuje nebezpečné sledovače</string>
+    <string name="systemSearchOnboardingFeatureTwoText">Vynutí šifrování na webových stránkách</string>
+    <string name="systemSearchOnboardingFeatureThreeText">Vymaže data jedním klepnutím</string>
+    <string name="systemSearchOnboardingButtonMore">Zobrazit více</string>
+    <string name="systemSearchOnboardingButtonLess">Skrýt</string>
+    <string name="systemSearchOnboardingButtonOk">Mám to</string>
+
+    <!-- Dax Dialog -->
+    <string name="daxDialogHideButton">SKRÝT</string>
+    <string name="daxDialogPhew">Pche!</string>
+    <string name="daxDialogYes">OK!</string>
+    <string name="daxDialogAddWidget">Přidat widget</string>
+    <string name="daxDialogMaybeLater">Možná později</string>
+    <string name="daxDialogSettings">Přejít na nastavení</string>
+    <string name="daxDialogNext">Další</string>
+    <string name="daxDialogHighFive">Plácnutí!</string>
+    <string name="daxDialogGotIt">Mám to</string>
+    <string name="hideTipsTitle">Skrýt zbývající tipy?</string>
+    <string name="hideTipsText">Je jich jen pár a snažili jsme se udělat je informativní.</string>
+    <string name="hideTipsButton">Navždy skrýt tipy</string>
 
 </resources>
