--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -360,6 +360,36 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Teigiamų atsiliepimų mygtukas</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Neigiamų atsiliepimų mygtukas</string>
     <string name="feedbackIsImportantToUs">Jūsų anoniminiai atsiliepimai mums labai svarbūs.</string>
+
+    <!-- Webview Recovery -->
+    <string name="crashedWebViewErrorMessage">Nepavyko parodyti tinklalapio.</string>
+    <string name="crashedWebViewErrorAction">Įkelti iš naujo</string>
+
+    <!-- System Search -->
     <string name="systemSearchOmnibarInputHint"><font size="13">Ieškoti arba įvesti URL</font></string>
+    <string name="systemSearchDeviceAppLabel">Iš šio įrenginio</string>
+    <string name="systemSearchAppNotFound">Nepavyko rasti programos</string>
+    <string name="systemSearchOnboardingText">Dėkojame, kad pasirinkote „DuckDuckGo“!\nDabar, kai naudojate mūsų paieškos funkciją ar programėlę, jūsų paieškos yra apsaugotos.</string>
+    <string name="systemSearchOnboardingFeaturesIntroText">„DuckDuckGo“ programėlė taip pat:</string>
+    <string name="systemSearchOnboardingFeatureOneText">Blokuoja nesaugius sekimo įrenginius</string>
+    <string name="systemSearchOnboardingFeatureTwoText">Priverstinis tinklalapių šifravimas</string>
+    <string name="systemSearchOnboardingFeatureThreeText">Išvalo duomenis vienu bakstelėjimu</string>
+    <string name="systemSearchOnboardingButtonMore">Rodyti daugiau</string>
+    <string name="systemSearchOnboardingButtonLess">Slėpti</string>
+    <string name="systemSearchOnboardingButtonOk">Supratau</string>
+
+    <!-- Dax Dialog -->
+    <string name="daxDialogHideButton">SLĖPTI</string>
+    <string name="daxDialogPhew">Oi!</string>
+    <string name="daxDialogYes">GERAI!</string>
+    <string name="daxDialogAddWidget">Pridėti valdiklį</string>
+    <string name="daxDialogMaybeLater">Galbūt vėliau</string>
+    <string name="daxDialogSettings">Eiti į nustatymus</string>
+    <string name="daxDialogNext">Kitas</string>
+    <string name="daxDialogHighFive">Duok penkis!</string>
+    <string name="daxDialogGotIt">Supratau</string>
+    <string name="hideTipsTitle">Slėpti likusius patarimus?</string>
+    <string name="hideTipsText">Jų tik keletas, stengėmės, kad jie būtų informatyvūs.</string>
+    <string name="hideTipsButton">Slėpti patarimus visam laikui</string>
 
 </resources>
