--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -356,6 +356,36 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Knop positieve feedback</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Knop negatieve feedback</string>
     <string name="feedbackIsImportantToUs">Jouw anonieme feedback is belangrijk voor ons.</string>
+
+    <!-- Webview Recovery -->
+    <string name="crashedWebViewErrorMessage">De webpagina kon niet worden weergegeven.</string>
+    <string name="crashedWebViewErrorAction">Opnieuw laden</string>
+
+    <!-- System Search -->
     <string name="systemSearchOmnibarInputHint"><font size="13">URL zoeken of typen</font></string>
+    <string name="systemSearchDeviceAppLabel">Van dit apparaat</string>
+    <string name="systemSearchAppNotFound">Toepassing kon niet worden gevonden</string>
+    <string name="systemSearchOnboardingText">Bedankt dat u voor DuckDuckGo heeft gekozen!\nWanneer u nu onze zoekopdracht of app gebruikt, zijn uw zoekopdrachten beveiligd.</string>
+    <string name="systemSearchOnboardingFeaturesIntroText">De DuckDuckGo-app:</string>
+    <string name="systemSearchOnboardingFeatureOneText">Blokkeert ook onveilige trackers</string>
+    <string name="systemSearchOnboardingFeatureTwoText">Dwingt codering af op websites</string>
+    <string name="systemSearchOnboardingFeatureThreeText">Wist gegevens met één tik</string>
+    <string name="systemSearchOnboardingButtonMore">Laat meer zien</string>
+    <string name="systemSearchOnboardingButtonLess">Verbergen</string>
+    <string name="systemSearchOnboardingButtonOk">Ik snap het</string>
+
+    <!-- Dax Dialog -->
+    <string name="daxDialogHideButton">VERBERGEN</string>
+    <string name="daxDialogPhew">Opluchting!</string>
+    <string name="daxDialogYes">OK!</string>
+    <string name="daxDialogAddWidget">Widget Toevoegen</string>
+    <string name="daxDialogMaybeLater">Later Misschien</string>
+    <string name="daxDialogSettings">Ga naar instellingen</string>
+    <string name="daxDialogNext">Volgende</string>
+    <string name="daxDialogHighFive">High Five!</string>
+    <string name="daxDialogGotIt">Ik snap het</string>
+    <string name="hideTipsTitle">Resterende tips verbergen?</string>
+    <string name="hideTipsText">Het zijn er maar een paar en we hebben geprobeerd ze informatief te maken.</string>
+    <string name="hideTipsButton">Tips voor altijd verbergen</string>
 
 </resources>
