--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -367,7 +367,7 @@
 
     <!-- Webview Recovery -->
     <string name="crashedWebViewErrorMessage">Nie można wyświetlić strony internetowej.</string>
-    <string name="crashedWebViewErrorAction">Przeładować</string>
+    <string name="crashedWebViewErrorAction">Przeładuj</string>
 
     <!-- System Search -->
     <string name="systemSearchOmnibarInputHint"><font size="13">Wyszukaj lub wpisz adres URL</font></string>
@@ -377,7 +377,7 @@
     <string name="systemSearchOnboardingFeaturesIntroText">Aplikacja DuckDuckGo także:</string>
     <string name="systemSearchOnboardingFeatureOneText">Blokuje niebezpieczne lokalizatory</string>
     <string name="systemSearchOnboardingFeatureTwoText">Wymusza szyfrowanie na stronach internetowych</string>
-    <string name="systemSearchOnboardingFeatureThreeText">Usuwa dane jednym dotknięciem</string>
+    <string name="systemSearchOnboardingFeatureThreeText">Usuwa dane za jednym dotknięciem</string>
     <string name="systemSearchOnboardingButtonMore">Pokaż więcej</string>
     <string name="systemSearchOnboardingButtonLess">Ukryć</string>
     <string name="systemSearchOnboardingButtonOk">Rozumiem</string>
