--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-Bug fixes and other improvements.
+In this release we added Estonian, Latvian and Turkish language support.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
